syntax = "proto3";

option csharp_namespace = "AuxGeneratedTrades";

package Trade;

service Trades {
  rpc StartLot(StartLotRequest) returns (StartLotReply);
  rpc GetList(GetListRequest) returns (GetListReply);
}

message GetListRequest {
  
}

message GetListReply {
  repeated Lot Lots = 1;
}
message Lot {
  string Id = 1;
  string Title=2;
  string Addr=3;
}

message StartLotRequest {
  string Id = 1;
  string Title = 2;
  string ClientId = 3;
}

message StartLotReply {

}
